Fix vulnerability visibility field alignment

--- a/src/styles/forms.scss
+++ b/src/styles/forms.scss
@@ -31,3 +31,8 @@ form.crud fieldset legend {
         }
     }
 }
+
+label span.field-explanation {
+    color: lightcoral;
+    font-style: italic;
+}
